test_suite/tests/ui/precondition/deserialize_de_lifetime.stderr
error: cannot deserialize when there is a lifetime parameter called 'de
  --> $DIR/deserialize_de_lifetime.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

