test_suite/tests/ui/precondition/deserialize_de_lifetime.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
struct S<'de> {
    s: &'de str,
}

fn main() {}
